--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,3 @@
-
 <!--主体内容-->
 <main ng-app="loginApp" ng-controller="loginController">
     <div class="mod-body">
@@ -6,7 +5,7 @@
             <!--左部分表单-->
             <div class="col-lg-7 col-md-7 col-sm-7">
                 <div class="head">
-                    <img src="/images/bootstrap-logo.png" alt="">
+                    <img src="/images/icon.png" alt="">
                     <p>基于nodeJS的社区系统</p>
                 </div>
                 <form name="loginForm" ng-submit="postForm()">
