--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,7 @@
     <div class="mod-body">
         <!--logo 标题-->
         <div class="main-head">
-            <img src="/images/bootstrap-logo.png" alt="">
+            <img src="/images/icon.png" alt="">
             <h1>注册新用户</h1>
         </div>
         <form class="main-body" ng-submit="postForm()" name="regForm">
