--- a/views/reply-list-all.ejs
+++ b/views/reply-list-all.ejs
@@ -1,5 +1,5 @@
 <% replies.forEach(function (reply, index) { %>
-<li id="<%= reply._id %>" class="comment-body-list clearfix">
+<li id="<%= reply._id %>" class="comment-body-list clearfix" userId="<%= user %>">
     <a class="head-img pull-left" href="/user/<%= reply.author.name %>"><img src="<%= reply.author.avatar %>" alt=""></a>
     <div class="col-lg-11 comment-list-content">
         <a class="comment-author" href="/user/<%= reply.author.name %>"><%= reply.author.name %></a></span>
