--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -6,6 +6,7 @@ main .container {
     border: 1px solid #E6E6E6;
     border-radius: 3px;
     background: #fff;
+    background: rgba(255, 255, 255, 0.7) !important;
 }
 .main-left {
     padding: 0;
