--- a/public/stylesheets/myCenter.css
+++ b/public/stylesheets/myCenter.css
@@ -6,6 +6,7 @@ main .container {
     border: 1px solid #E6E6E6;
     border-radius: 3px;
     background: #fff;
+    background: rgba(255, 255, 255, 0.7) !important;
 }
 .main-left {
     padding: 0;
@@ -131,6 +132,10 @@ main .container {
 
 .more {
     font-size: 12px;
+    cursor: pointer;
+}
+.more:focus {
+    outline: none;
 }
 .main-right > div {
     border-bottom: 1px solid #eee;
@@ -166,3 +171,27 @@ main .container {
     color: #999;
 }
 
+.modal-header {
+    margin-bottom: 0!important;
+    padding-bottom: 0;
+}
+.modal-body {
+    padding-top: 5px;
+}
+.myFollows-list li {
+    margin: 10px 0;
+    border-bottom: 1px solid #f1f1f1;
+    padding-bottom: 10px;
+}
+.myFollows-list li:last-of-type {
+    border-bottom: none;
+}
+.myFollows-list a {
+    display: inline-block;
+    line-height: 25px;
+}
+@media (min-width: 768px) {
+    .modal-dialog {
+        width: 500px;
+    }
+}
