--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -1,4 +1,3 @@
-
 .mod-body {
     width: 714px;
     margin: 80px auto;
@@ -6,6 +5,7 @@
     border: 1px solid #ccc;
     text-align: center;
     padding: 40px 0;
+    background: rgba(255, 255, 255, 0.7) !important;
 }
 .main-head img {
     width: 120px;
