--- a/views/comment-spa.ejs
+++ b/views/comment-spa.ejs
@@ -1,4 +1,4 @@
-<li class="comment-body-list clearfix">
+<li class="comment-body-list clearfix" id="<%= comment._id %>" commentId="<%= comment.author._id %>" userId="<%= user %>">
     <div class="twoReply-content clearfix">
         <a class="head-img pull-left" href="/user/<%= comment.author.name %>"><img src="<%= comment.author.avatar %>" alt=""></a>
         <div class="col-lg-11 comment-list-content clearfix">
@@ -10,14 +10,14 @@
             <% } %>
             <p><%- markdown(comment.content) %></p>
             <div class="meta">
-                <a href="#">
+                <a href="javascript:;" class="two-like">
                     <span class="fa fa-thumbs-up"></span>
-                    0
+                    <%= comment.likes.length %>
                 </a>
                 &nbsp;
-                <a href="#">
+                <a href="javascript:;" class="two-unlike">
                     <span class="fa fa-thumbs-down"></span>
-                    0
+                    <%= comment.unlikes.length %>
                 </a>
                 <span class="pull-right"><%= comment.create_time_ago() %></span>
             </div>
