--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,2 +1,6 @@
-<h3><%= message %></h3>
-<p><%= error %></p>
+<div class="container" style="margin-top: 50px;">
+    <h1>浏览器开小差啦：</h1>
+    <h3 style="text-align: center;color: red;margin: 50px 0;font-size: 40px;"><i class="fa fa-exclamation-triangle"></i> <%= message %></h3>
+    <img style="width: 100%" src="/images/error.jpg" alt="">
+    <p><%= error %></p>
+</div>
