--- a/views/indexTemplate.ejs
+++ b/views/indexTemplate.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title><%= title %></title>
-    <link rel="icon" href="/images/bootstrap-logo.png">
+    <link rel="icon" href="/images/icon.png">
     <!--加载图标库-->
     <link rel="stylesheet" href="/plugins/font-awesome/css/font-awesome.css">
     <!--加载jquery-->
@@ -32,7 +32,7 @@
 </head>
 <body>
 <!--导航栏-->
-<nav class="navbar navbar-inverse" role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <!--响应式汉堡按钮、logo-->
         <div class="navbar-header pull-left">
@@ -47,8 +47,9 @@
         <!--导航栏-->
         <div class="collapse navbar-collapse pull-left col-xs-12" id="example-navbar-collapse">
             <ul class="nav navbar-nav navbar-left">
-                <li class="active"><a href="/"><span class="fa fa-id-card"></span> 发现</a></li>
-                <% if(user) { %>
+                <li><a href="/"><span class="fa fa-id-card"></span> 首页</a></li>
+                <input type="text" class="header-search" placeholder="搜索"><i class="fa fa-search"></i>
+                <% if(user){ %>
                     <li>
                         <a href="/my/messages" class="tell"><span class="fa fa-bell-o"></span>
                             <% if(msg_count) { %>
@@ -59,15 +60,16 @@
                     </li>
                 <% } %>
             </ul>
+
         </div>
-        <% if(user) { %>
+        <% if(user){ %>
             <!--右侧头像-->
             <a class="my pull-right" href="/user/<%= user.name %>">
                 <img src="<%= user.avatar %>" alt="">
             </a>
             <!--发布文章按钮-->
             <a  class="publish pull-right" href="/question/create">
-                <span class="fa fa-book"></span>&#x3000;发起
+                <span class="fa fa-book"></span>&nbsp; 发起
             </a>
             <!--用户设置-->
             <ul class="setting">
@@ -77,8 +79,8 @@
         <% } else { %>
             <!--登录、注册按钮-->
             <div class="button pull-right">
-                <a class="login" href="/login">登录</a>
-                <a class="register" href="/register">注册</a>
+                <a class="login" href="/login"><i class="glyphicon glyphicon-log-in"></i>&nbsp; 登录</a>
+                <a class="register" href="/register"><i class="glyphicon glyphicon-user"></i>&nbsp; 注册</a>
             </div>
         <% } %>
 
@@ -93,42 +95,44 @@
         <div class="container">
             <!--尾部左部分-->
             <div class="footer-logo col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                <img src="/images/zhiyou.png" alt="">
-                <p>本网站所有的解释权归智游教育集团,由教学部nodeJS组成员整理,不允许任何人以任何目的进行传播和商业运作</p>
+                <h2 style="color: #fff;">我的github：</h2>
+                <img src="/images/github.png" alt="" style="width: 25%;float: left">
+                <p style="margin-left: 150px;font-size: 18px">本网站所有的解释权归智游教育集团,由教学部nodeJS组成员整理,不允许任何人以任何目的进行传播和商业运作</p>
             </div>
             <!--尾部右部分-->
             <div class="footer-list col-lg-5 col-md-5 col-sm-12 col-xs-12 pull-right">
                 <ul class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <li>关于</li>
-                    <li>关于我们</li>
-                    <li>广告合作</li>
-                    <li>友情链接</li>
+                    <li><a href="">关于我</a></li>
+                    <li><a href="">广告合作</a></li>
+                    <li><a href="">友情链接</a></li>
                 </ul>
                 <ul class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <li>联系方式</li>
-                    <li>联系QQ</li>
-                    <li>电子邮件</li>
+                    <li><a href="">QQ:597782047</a></li>
+                    <li><a href="">Tel:13592503871</a></li>
                 </ul>
                 <ul class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
                     <li>旗下网站</li>
-                    <li>智游集团</li>
-                    <li>苏威晴的个人博客</li>
+                    <li><a href="http://www.zhiyou100.com/">智游集团</a></li>
+                    <li><a href="">裴猛的个人博客</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <p class="copy">本网站的所有权归智游集团学员苏威晴所有</p>
+    <p class="copy"><a href="javascript:vido();">&copy; 豫ICP备17036816号-1</a><br><a href="">版权所有,翻版必究</a></p>
 </footer>
+<a id="Backtop" href="#"><img src="/images/top.png" alt="top"></a>
 </body>
 </html>
 <script>
     $(function () {
         // 导航栏显示隐藏特效
-        $('.my').add('.setting').on('mouseover', function () {
-            $('.setting').css('display', 'block');
+        $('.my').add('.setting').on('mouseover',function(){
+            $('.setting').stop(true, false).slideDown();
         })
-        $('.my').add('.setting').on('mouseout', function () {
-            $('.setting').css('display', 'none');
+        $('.my').add('.setting').on('mouseout',function(){
+            $('.setting').stop(true, false).slideUp();
         })
     })
 </script>
